--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # --- General options --- #
 
 # Name of website
-title: My website
+title: Gaeun Lee
 
 # Short description of your site
-description: A virtual proof that I'm awesome
+description: R & SQL & Python & Tableau 
 
 # --- Local development options ---
 # If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
@@ -68,10 +68,9 @@ author:
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
   rss: true
-  email: "someone@example.com"
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
+  email: "leegaeunstat@gmail.com"
+  github: po77777777
+ 
 #  reddit: yourname
 #  linkedin: daattali
 #  xing: yourname
