--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ social-network-links:
   github: po77777777
  
 #  reddit: yourname
-#  linkedin: daattali
+  linkedin: https://www.linkedin.com/in/gaeun-lee-57116214b/
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
